<?xml version="1.0"?>
<package>
  <name>robotiq_s_model_joint_state_publisher</name>
  <version>0.0.1</version>
  <description>The robotiq_s_model_joint_state_publisher package</description>
  <maintainer email="krupke@informatik.uni.hamburg.de">Dennis Krupke</maintainer>
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/robotiq_s_model_joint_state_publisher</url> -->
  <author email="krupke@informatik.uni.hamburg.de">Dennis Krupke</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>robotiq_s_model_control</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>robotiq_s_model_control</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
