<?xml version="1.0"?>
<package>
  <name>robotiq_s_model_joint_state_publisher</name>
  <version>0.0.1</version>
  <description>estimate joint states of Robotiq's s model hand</description>
  <maintainer email="krupke@informatik.uni.hamburg.de">Dennis Krupke</maintainer>
  <license>BSD</license>
  <author email="krupke@informatik.uni.hamburg.de">Dennis Krupke</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotiq_s_model_control</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>robotiq_s_model_control</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <export>

  </export>
</package>
